--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Mark Wilson's Verizon Discounts</h1>
     <div>
       <p>Hi, I'm mark!</p>
+      <img src="https://avatars.githubusercontent.com/u/181895944?v=4">
       <br>
       <a href="https://github.com/mark-wilsons-verizon-discounts">Github</a>
       <br>
