--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <body>
     <h1>Mark Wilson's Verizon Discounts</h1>
+    <h2><i>Conducting Business since 2024™</i></h2>
     <div>
-      <p>Hi, I'm mark!</p>
+      <p>Hi, I'm Mark!</p>
       <img src="https://avatars.githubusercontent.com/u/181895944?v=4">
       <br>
       <a href="https://github.com/mark-wilsons-verizon-discounts">Github</a>
