--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" herf="style.css" / >
   <body>
-    <div class="flex hstack"><h1>Mark Wilson's Verizon Discounts <pre style="color:red">✓</pre></h1></div>
+    <div class="flex hstack">
+      <h1>Mark Wilson's Verizon Discounts</h1>
+      <pre style="color:red">✓</pre>
+    </div>
     <h2><i>Conducting Business since 2024™</i></h2>
     <div>
       <p>Hi, I'm Mark!</p>
