--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2><i>Conducting Business since 2024™</i></h2>
     <div>
       <p>Hi, I'm Mark!</p>
+      <p>Looking for some verizon discounts? You have come to the right place. Our discount plan comprehensively covers all your needs, catering to our clients</p>
       <img src="https://avatars.githubusercontent.com/u/181895944?v=4">
       <br>
       <a href="https://github.com/mark-wilsons-verizon-discounts">Github</a>
