--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" herf="style.css" / >
+  <meta name="google-site-verification" content="gUeBTV_bNMpyrFcrmFwzph0TpouhqdTwZH0Urm01lxA" />
   <body>
 
       <h1>Mark Wilson's Verizon Discounts <span style="color:red">✓</span></h1>
