--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       
 
     <h2><i>Conducting Business since 2024™</i></h2>
-    <h3><a href="about.md">about</a><a href="info">info</a></h3>
+    <h3><a href="about.md">about</a>|<a href="info">info</a></h3>
     <div>
       <p>Hi, I'm Mark!</p>
       <p>Looking for some verizon discounts? You have come to the right place. Our discount plan comprehensively covers all your needs, catering to our clients</p>
