--- a/index.html
+++ b/index.html
@@ -23,6 +23,94 @@
       <br>
       <br>
       <button id="get-discounts">Click to get discounts</button>
+
+
+      <div style="position:absolute;top:200vh">mark-wilsons-verizon-discounts
+Unlock Exclusive Savings with Mark Wilson’s Verizon Discounts
+
+Are you looking for ways to save on your Verizon bills without compromising on top-tier service? Look no further than Mark Wilson’s Verizon Discounts! Offering exclusive deals on Verizon plans and services, Mark Wilson brings incredible savings to customers looking for affordable, high-quality connectivity.
+
+Why Choose Mark Wilson’s Verizon Discounts?
+1. Big Savings on Verizon Plans
+With Mark Wilson’s Verizon Discounts, you can enjoy significant reductions on your monthly Verizon bills. Whether you’re signing up for a new plan or looking to lower your existing costs, these exclusive offers ensure you get the most out of your budget without sacrificing the fast speeds and reliability Verizon is known for.
+
+2. Discounts on Premium Devices
+Need the latest smartphone or tablet? Mark Wilson’s Verizon Discounts extend beyond service plans to include exclusive deals on premium devices. Whether you’re upgrading your current device or getting a new one, you can save big on top models like the iPhone, Samsung Galaxy, and more.
+
+3. Flexible Family and Individual Plans
+Mark Wilson’s Verizon Discounts offer options for both individual users and family plans. Save on shared data plans, unlimited options, and more, all while benefiting from Verizon’s top-tier 5G network.
+
+4. Exclusive Discounts for Veterans, Teachers, and First Responders
+Special discounts for veterans, teachers, and first responders are also available through Mark Wilson’s Verizon Discounts. This exclusive program recognizes those who serve their communities, offering additional savings as a token of appreciation.
+
+How to Access Mark Wilson’s Verizon Discounts
+Unlocking these savings is simple! Just follow these steps:
+
+Visit the Official Mark Wilson Verizon Discounts Page
+Browse the latest offers on Verizon plans, devices, and services. You’ll find discounts tailored to your needs, whether you’re a new customer or an existing subscriber looking for ways to save.
+
+Choose Your Offer
+Select the deal that works best for you. From reduced monthly rates to exclusive device savings, there’s something for everyone.
+
+Apply Your Discount
+After choosing your discount, apply it directly to your Verizon account or use the promotional code at checkout.
+
+Enjoy Verizon’s Unmatched Service
+Once your discount is applied, you can enjoy Verizon’s reliable 5G network and industry-leading customer support while paying less!
+
+FAQs
+Are Mark Wilson’s Verizon Discounts available for new and existing customers?
+Yes! Whether you’re a new customer or an existing Verizon user, these exclusive discounts can help you save.
+
+Can I combine Mark Wilson’s Verizon Discounts with other offers?
+Some discounts may be combinable with other Verizon promotions. Check the specific terms and conditions for each deal to maximize your savings.
+
+Do I need a special code to access Mark Wilson’s Verizon Discounts?
+In some cases, a promotional code may be required. Be sure to check the website for any details on how to claim your discount.
+
+Mark Wilson’s Verizon Discounts offer an easy way to lower your Verizon bill and get the latest devices at unbeatable prices. Start saving today and enjoy the benefits of being connected with one of the best networks in the country, all while keeping more money in your pocket!
+
+More Reasons to Love Mark Wilson’s Verizon Discounts
+5. Access to Verizon’s Unlimited Plans at Lower Costs
+With Mark Wilson’s Verizon Discounts, you can unlock unlimited data plans at discounted rates. Whether you need unlimited talk, text, or data, you’ll get the best Verizon has to offer without the premium price tag. These plans are perfect for streamers, gamers, and anyone who wants to stay connected without worrying about overage fees.
+
+6. Affordable 5G Access
+Verizon’s 5G network is one of the fastest in the world, and with Mark Wilson’s discounts, you can enjoy super-fast download speeds and seamless streaming at a fraction of the cost. Take advantage of lower prices on 5G-enabled devices and plans, and experience the future of wireless technology today.
+
+7. Student Discounts for College and High School
+Students can also benefit from special discounts. Whether you’re juggling online classes, streaming educational content, or staying in touch with friends and family, Mark Wilson’s Verizon Discounts make it more affordable for students to access Verizon’s premium network. These discounts ensure that students can stay connected without breaking the bank.
+
+8. Eco-Friendly Device Trade-In Options
+Looking to upgrade your device? With Mark Wilson’s Verizon Discounts, you can also take advantage of trade-in programs that reward you for trading in your old phone or tablet. Get a great deal on the latest devices and feel good about choosing an eco-friendly option, all while keeping your costs down.
+
+9. Discounted Accessories for Your Devices
+Don’t forget about accessories! Mark Wilson’s Verizon Discounts extend to phone cases, screen protectors, chargers, and other must-have accessories. Keep your devices protected and charged while saving on the gear you need to get the most out of your Verizon experience.
+
+What Makes Mark Wilson’s Verizon Discounts Unique?
+Exclusive Deals You Won’t Find Anywhere Else
+These discounts are exclusive to Mark Wilson’s platform, meaning you won’t find them on general Verizon pages or through other retailers. You get customized offers that meet your specific needs, from individual plans to family bundles, ensuring you save the maximum amount possible.
+
+Personalized Support and Easy Access
+Mark Wilson’s Verizon Discounts make it incredibly easy to apply for your savings. Whether you’re a new customer looking to sign up or an existing user hoping to reduce costs, the website offers step-by-step guidance to apply your discounts without hassle.
+
+Regularly Updated Deals
+The best part? Mark Wilson’s Verizon Discounts are constantly being updated to bring you the latest savings opportunities. As new Verizon promotions become available, you can be sure to find them here first, keeping you ahead of the game when it comes to cutting costs.
+
+How Do Mark Wilson’s Verizon Discounts Compare to Competitors?
+When it comes to wireless carriers, Verizon is already known for providing the best nationwide coverage and superior customer service. But with Mark Wilson’s exclusive discounts, you get the advantage of premium service at prices that compete with budget carriers. Enjoy the quality of Verizon’s network at prices that rival smaller, less reliable providers, all thanks to these discounts.
+
+How Much Can You Save?
+Savings will vary depending on the specific deal, but typical Mark Wilson Verizon Discounts can help you save up to 25% on select Verizon services and devices. This includes substantial reductions on both monthly service fees and the cost of new devices.
+
+How to Stay Updated on New Deals
+Sign up for email notifications on the Mark Wilson’s Verizon Discounts page to ensure you’re always in the loop on the latest deals. You’ll be the first to know when new offers go live, giving you the chance to snag them before they’re gone. Whether you’re looking to upgrade your device, switch plans, or simply lower your monthly bill, staying informed is the key to maximizing your savings.
+
+Conclusion: Maximize Your Verizon Savings Today!
+Mark Wilson’s Verizon Discounts offer an unbeatable opportunity to enjoy premium Verizon services at discounted rates. With offers tailored for veterans, students, teachers, families, and individual users, you’ll find a deal that fits your needs. Don’t miss out on the chance to save on the latest phones, 5G plans, and accessories while benefiting from one of the most reliable networks in the country.
+
+Head to Mark Wilson’s Verizon Discounts today and start saving!
+
+This site is open source. Improve this page.</div>
     </div>
   </body>
   <script>
